--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,3 @@
 [DISCORD]
-token = MTIzMTExMTU1MzI0MDI2ODgxMQ.GmZNx1.InAUr1Q47gfTFz_BQXjfNy7-A8NAj4EBzXQkfU
+token = MTIzMTExMTU1MzI0MDI2ODgxMQ.GwkWyW.j2iu7crOsVG5hbKtRb573M1L4BOOPpODA90k4w
 user_id = 1399725879600349234
